# remove_empty_subdirs

./: Cargo.toml  README.md
examples/: remove_empty_subdirs.rs
src/: lib.rs
tests/: remove_empty_subdirs.rs
